add concept preparation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ enddate: 2017-02-10        # machine-readable end date for the workshop in YYYY-
 instructor: ["Karen Cranston","Neal Davis"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["N/A"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "karen.cranston@gmail.com"      # contact email address for host, lead instructor, or whoever else is handling questions
-etherpad:             # optional: URL for the workshop Etherpad if there is one
+etherpad:  http://pad.software-carpentry.org/2017-02-09-utahstate-ttt           # optional: URL for the workshop Etherpad if there is one
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
 
@@ -158,14 +158,14 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 <h2 id="preparation" name="preparation">Preparation</h2>
 
 <p>
-  Please read the following before the workshop begins:
+  ONE: Please read the following before the workshop begins:
 </p>
 <ol>
   <li><a href="{{ site.training_site }}/papers/porter-what-works-2013.pdf">Success in Introductory Programming: What Works?</a></li>
   <li><a href="{{ site.training_site }}/papers/science-of-learning-2015.pdf">The Science of Learning</a></li>
 </ol>
 <p>
-  Please also read through <em>one</em> of the episodes below
+  TWO: Please also read through <em>one</em> of the episodes below
   carefully, so that you can do some exercises based on it on the
   first day of the class.
 </p>
@@ -190,6 +190,14 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     </ul>
   </div>
 </div>
+  <p>
+    THREE: You will do a few small group exercises on day one that involve
+    explaining a concept to other participants. This could be anything - one of
+    your research projects, a scientific theory in your domain, something you
+    work on outside of your day job, etc. You will use the same concept
+    throughout the set of exercises. If you feel more comfortable thinking about
+    this in advance, please do (but it is not necessary).
+  </p>
 
 <hr/>
 
