--- a/index.html
+++ b/index.html
@@ -211,19 +211,18 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>Day 1</td> <td>09:00</td> <td>Welcome</td> </tr>
-      <tr> <td>     </td> <td>09:10</td> <td>Introduction</td> </tr>
+      <tr> <td>Day 1</td> <td>09:00</td> <td>Welcome and Introduction</td> </tr>
       <tr> <td>     </td> <td>09:40</td> <td>Novices and Formative Assessment</td> </tr>
-      <tr> <td>     </td> <td>10:40</td> <td>Morning Coffee</td> </tr>
-      <tr> <td>     </td> <td>10:55</td> <td>Teaching as a Performance Art</td> </tr>
-      <tr> <td>     </td> <td>11:55</td> <td>Morning Wrap-Up</td> </tr>
-      <tr> <td>     </td> <td>12:10</td> <td>Lunch</td> </tr>
-      <tr> <td>     </td> <td>13:10</td> <td>Expertise and Memory</td> </tr>
-      <tr> <td>     </td> <td>14:25</td> <td>Afternoon Coffee</td> </tr>
-      <tr> <td>     </td> <td>14:40</td> <td>Performance Revised</td> </tr>
-      <tr> <td>     </td> <td>15:25</td> <td>Cognitive Load</td> </tr>
-      <tr> <td>     </td> <td>16:05</td> <td>Afternoon Wrap-Up</td> </tr>
-      <tr> <td>     </td> <td>16:20</td> <td>Finish</td> </tr>
+      <tr> <td>     </td> <td>10:30</td> <td>Morning Coffee</td> </tr>
+      <tr> <td>     </td> <td>10:45</td> <td>Teaching as a Performance Art</td> </tr>
+      <tr> <td>     </td> <td>11:45</td> <td>Morning Wrap-Up</td> </tr>
+      <tr> <td>     </td> <td>12:00</td> <td>Lunch</td> </tr>
+      <tr> <td>     </td> <td>13:00</td> <td>Expertise and Memory</td> </tr>
+      <tr> <td>     </td> <td>14:15</td> <td>Afternoon Coffee</td> </tr>
+      <tr> <td>     </td> <td>14:30</td> <td>Performance Revised</td> </tr>
+      <tr> <td>     </td> <td>15:15</td> <td>Cognitive Load</td> </tr>
+      <tr> <td>     </td> <td>15:55</td> <td>Afternoon Wrap-Up</td> </tr>
+      <tr> <td>     </td> <td>16:15</td> <td>Finish</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
