prep day one vs day two

--- a/index.html
+++ b/index.html
@@ -165,9 +165,17 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <li><a href="{{ site.training_site }}/papers/science-of-learning-2015.pdf">The Science of Learning</a></li>
 </ol>
 <p>
-  TWO: Please also read through <em>one</em> of the episodes below
+  TWO: You will do a few small group exercises on day one that involve
+  explaining a concept to other participants. This could be anything - one of
+  your research projects, a scientific theory in your domain, something you
+  work on outside of your day job, etc. You will use the same concept
+  throughout the set of exercises. If you feel more comfortable thinking about
+  this in advance, please do (but it is not necessary).
+</p>
+<p>
+  THREE: Please also read through <em>one</em> of the episodes below
   carefully, so that you can do some exercises based on it on the
-  first day of the class.
+  second day of the class.
 </p>
 <div class="row">
   <div class="col-md-6">
@@ -190,14 +198,6 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     </ul>
   </div>
 </div>
-  <p>
-    THREE: You will do a few small group exercises on day one that involve
-    explaining a concept to other participants. This could be anything - one of
-    your research projects, a scientific theory in your domain, something you
-    work on outside of your day job, etc. You will use the same concept
-    throughout the set of exercises. If you feel more comfortable thinking about
-    this in advance, please do (but it is not necessary).
-  </p>
 
 <hr/>
 
