add inclusivity paper

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 <ol>
   <li><a href="{{ site.training_site }}/papers/porter-what-works-2013.pdf">Success in Introductory Programming: What Works?</a></li>
   <li><a href="{{ site.training_site }}/papers/science-of-learning-2015.pdf">The Science of Learning</a></li>
+  <li><a href="{{ site.training_site }}/papers/lee-create-inclusive-community-2015.pdf">What Can I Do Today to Create a More Inclusive Community in CS?</a></li>
 </ol>
 <p>
   TWO: You will do a few small group exercises on day one that involve
