--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
       <tr> <td>     </td> <td>09:40</td> <td><a href="https://swcarpentry.github.io/instructor-training/02-novice/">Novices and Formative Assessment</a></td> </tr>
       <tr> <td>     </td> <td>10:30</td> <td>Morning Coffee</td> </tr>
       <tr> <td>     </td> <td>10:45</td> <td><a href="https://swcarpentry.github.io/instructor-training/05-performance/">Teaching as a Performance Art</a></td> </tr>
-      <tr> <td>     </td> <td>11:45</td> <td>Morning Wrap-Up</td> </tr>
+      <tr> <td>     </td> <td>11:45</td> <td><a href="https://swcarpentry.github.io/instructor-training/06-summarize/">Morning Wrap-Up</a></td> </tr>
       <tr> <td>     </td> <td>12:00</td> <td>Lunch</td> </tr>
       <tr> <td>     </td> <td>13:00</td> <td><a href="https://swcarpentry.github.io/instructor-training/08-memory/">Expertise and Memory</a></td> </tr>
       <tr> <td>     </td> <td>14:15</td> <td>Afternoon Coffee</td> </tr>
-      <tr> <td>     </td> <td>14:30</td> <td>Performance Revised</td> </tr>
+      <tr> <td>     </td> <td>14:30</td> <td><a href="https://swcarpentry.github.io/instructor-training/10-performance/">Performance Revised</a></td> </tr>
       <tr> <td>     </td> <td>15:15</td> <td><a href="https://swcarpentry.github.io/instructor-training/11-load/">Cognitive Load</a></td> </tr>
-      <tr> <td>     </td> <td>15:55</td> <td>Afternoon Wrap-Up</td> </tr>
+      <tr> <td>     </td> <td>15:55</td> <td><a href="https://swcarpentry.github.io/instructor-training/12-summarize/">Afternoon Wrap-Up</a></td> </tr>
       <tr> <td>     </td> <td>16:15</td> <td>Finish</td> </tr>
     </table>
   </div>
@@ -228,13 +228,13 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
       <tr> <td>     </td> <td>10:15</td> <td>Morning Coffee</td> </tr>
       <tr> <td>     </td> <td>10:30</td> <td><a href="https://swcarpentry.github.io/instructor-training/21-carpentries/">The Carpentries</a></td> </tr>
       <tr> <td>     </td> <td>11:30</td> <td><a href="https://swcarpentry.github.io/instructor-training/15-practices/">Carpentry Teaching Practices</a></td> </tr>
-      <tr> <td>     </td> <td>12:00</td> <td>Morning Wrap-Up</td> </tr>
+      <tr> <td>     </td> <td>12:00</td> <td><a href="https://swcarpentry.github.io/instructor-training/17-summarize/">Morning Wrap-Up</a></td> </tr>
       <tr> <td>     </td> <td>12:15</td> <td>Lunch</td> </tr>
       <tr> <td>     </td> <td>13:15</td> <td><a href="https://swcarpentry.github.io/instructor-training/16-motivation/">Motivation/Demotivation</a></td> </tr>
       <tr> <td>     </td> <td>14:00</td> <td><a href="https://swcarpentry.github.io/instructor-training/19-lessons/">Lessons and Objectives</a></td> </tr>
       <tr> <td>     </td> <td>15:00</td> <td>Afternoon Coffee</td> </tr>
       <tr> <td>     </td> <td>15:15</td> <td><a href="https://swcarpentry.github.io/instructor-training/checkout/">Overview of Instructor Checkout</a></td> </tr>
-      <tr> <td>     </td> <td>15:30</td> <td>Afternoon Wrap-up</td> </tr>
+      <tr> <td>     </td> <td>15:30</td> <td><a href="https://swcarpentry.github.io/instructor-training/22-summarize/">Afternoon Wrap-up</a></td> </tr>
       <tr> <td>     </td> <td>16:00</td> <td>Finish</td> </tr>
     </table>
   </div>
